refactor overlay decoders & fix text object position